Add mockito tests for the service layer